Initial changes to testing with JDK 9